feat: update test for better version